# Eveheart

./: .dockerignore  .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  simple_dataset.py  skills-lock.json
apps/web/: .env.example  app-config.ts  components.json  next.config.js  package.json  pnpm-lock.yaml  proxy.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(home)/: layout.tsx
apps/web/app/aging-friendly/: aging-friendly-nav.tsx  layout.tsx  page.tsx
apps/web/app/dashboard/: layout.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/components/: logo.tsx  mode-toggle.tsx
apps/web/components/agents-ui/: agent-control-bar.tsx
apps/web/components/dashboard/: chat-panel.tsx  dashboard-header.tsx  dashboard-shell.tsx  digital-human.tsx  emotion-status.tsx
apps/web/hooks/: README.md  use-auth.ts  useAgentErrors.tsx
apps/web/lib/: auth.ts  prisma.ts  proxy-auth-headers.ts  utils.ts
apps/web/schemas/: auth.ts  chat.ts  emotion.ts  family-notifications.ts
docker/: Dockerfile.agent  Dockerfile.web  docker-compose.yml  export-images.ps1  start-web.sh
docs/: project-health-report.md
documents/: AI_DEV_PROMPT.md  Architecture.md  Dev_Specifications.md
documents/knowledge-base/: Psychology.md
services/agent/: load_model.py  pyproject.toml  test_funasr.py
services/agent/script/: download_model.py
services/agent/src/: agent.py  config.py  local_asr.py  my_agent.py  my_voice_agent.py  voice_agent.py
services/agent/tests/: test_local_asr.py  test_my_agent.py
services/ai/app/: readme.md
(+108 files in other folders)
