[project]
name = "eveheart-agent"
version = "0.1.0"
description = "agent for Eveheart"
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "livekit-agents[anam,silero,turn-detector]~=1.4",
    "livekit-plugins-ai-coustics~=0.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv",
]

[tool.uv]
package = false
