[project]
name = "eveheart-agent"
version = "0.1.0"
description = "agent for Eveheart"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "funasr>=1.3.1",
    "livekit-agents[anam,keyframe,silero,turn-detector]~=1.4",
    "livekit-plugins-ai-coustics~=0.2",
    "livekit-plugins-noise-cancellation~=0.2",
    "modelscope>=1.35.4",
    "numpy>=2.2.6",
    "python-dotenv",
    "torch>=2.11.0",
    "torchaudio>=2.11.0",
]

[tool.uv]
package = false
